--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Contact Form Example</title>
+		<title>rams-research</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 		<meta name="googlebot" content="noindex">
 		<meta name="robots" content="noindex">
-		<link rel="stylesheet" href="styles.css">
-		<link rel="author" href="https://github.com/omrilotan/contact-form-example">
-		<link rel="help" href="https://medium.com/@omrilotan/contact-form-for-static-websites-56650393f78c">
-		<link rel="license" href="https://raw.githubusercontent.com/omrilotan/contact-form-example/master/LICENSE">
 	</head>
 	<body>
 		<main>
@@ -23,12 +19,5 @@
 				<button>Send</button>
 			</form>
 		</main>
-		<script type="module">
-import enhanceForm from './enhance-form.mjs'
-enhanceForm({
-	form: theform,
-	feedback
-});
-		</script>
 	</body>
 </html>
