--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
 		<meta name="robots" content="noindex">
 	</head>
 	<body>
-		<main>
-			<p id="feedback">Speak your mind!</p>
-			<form id="theform" action="https://hooks.zapier.com/hooks/catch/616786/oo3yxpc/" method="post">
-				<input type="text" name="name" placeholder="Name" pattern="^[\w'\s]*$" x-custom-validation-message="Please fill in your name in English." required>
-				<input type="email" name="email" placeholder="Email address" required>
-				<input type="phone" name="phone" placeholder="Phone numer" pattern="^[\d\-\s\.,]{2,}$" x-custom-validation-message="Your phone number must contain digits. Also acceptable are: dash, space, dots, and commas.">
-				<textarea name="message" placeholder="Query" required></textarea>
-				<button>Send</button>
-			</form>
-		</main>
+		Hello World
 	</body>
 </html>
