--- a/index.html
+++ b/index.html
@@ -3,26 +3,27 @@
 	<head>
 		<title>rams-research</title>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 		<meta name="googlebot" content="noindex">
 		<meta name="robots" content="noindex">
+		<link href="testmax.wasm" rel="stylesheet">
 	</head>
 	<body>
 		Hello World
+
 		Test WASM
+
 		<script>
-         const importObj = {
-            env: { 
-               displaylog: n => alert("The max of (400, 130) is " +n) 
-            } 
-         };
-         fetch("testmax.wasm") .then(bytes => bytes.arrayBuffer()) 
-            .then(module => WebAssembly.instantiate(module, importObj)) 
-            .then(finalcode => { 
-            console.log(finalcode); 
-            console.log(finalcode.instance.exports.max(400,130)); 
-         }); 
-      </script> 
+const importObj = { env: {  displaylog: n => alert("The max of (400, 130) is " +n) } };
+fetch("testmax.wasm")
+	.then(bytes => bytes.arrayBuffer()) 
+	.then(module => WebAssembly.instantiate(module, importObj))
+	.then(
+		finalcode => {
+			console.log(finalcode); 
+			console.log(finalcode.instance.exports.max(400,130)); 
+		}
+	);
+		</script> 
 	</body>
 </html>
