--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		Hello World
 
-		Test WASM
+		Test WASM 2 contiacao
 
 		<script>
 const importObj = { env: {  displaylog: n => alert("The max of (400, 130) is " +n) } };
