--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ summary:active{
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('dataflow-1.png');
+  background-image: url('img/dataflow-1.png');
   min-height: 100%;
   width:100%;
   background-size: auto;
@@ -147,7 +147,7 @@ summary:active{
         <i class="fa fa-user w3-margin-right"></i>Rodrigo A. Moreira <br>
         <i class="fa-brands fa-orcid"></i> <a href="https://orcid.org/0000-0002-7605-8722"> https://orcid.org/0000-0002-7605-8722 </a>
       </b></p><br>
-      <img src="me.jpeg" class="w3-round w3-image " alt="Photo of Me" width="222" height="111"> <!-- w3-opacity w3-hover-opacity-off -->
+      <img src="img/me.jpeg" class="w3-round w3-image " alt="Photo of me" width="222" height="111"> <!-- w3-opacity w3-hover-opacity-off -->
     </div>
     <!-- Hide this text on small devices -->
     <div class="m6 w3-hide-small w3-padding-large">
@@ -169,7 +169,10 @@ I have pioneered a framework that combines for the first time data analysis from
   <ul>
     <li>
       <img src="logo-bcam-color-transparent-450-300x150.png" class="w3-image w3-round" style="height: 150px">
-      <a href="https://www.ikerbasque.net/en/news/basque-government-will-invest-additional-100-million-euros-10-years-promote-strategic-areas"> <img src="img/ikur_logo.png" class="w3-image w3-round" style="width: 150px"> </a><br>
+      <a href="https://www.ikerbasque.net/en/news/basque-government-will-invest-additional-100-million-euros-10-years-promote-strategic-areas">
+        <img src="img/ikur_logo.png" class="w3-image w3-round" style="width: 150px">
+      </a>
+      <img src="img/curead-1.png" alt="curead-logo" class="w3-image w3-round" style="height: 150px"><br>
       Mathematical Modelling Applied to Health<br>
       Long-term Covid-19 Multiphase Persistent Interaction – Ikur-BMTF
     </li>
