--- a/topologyviewer/index.html
+++ b/topologyviewer/index.html
@@ -48,12 +48,12 @@
 	<body>
 		<div class="w3-container w3-center w3-light-green">
 			<div class="w3-row">
-				<div id="info" class="w3-col l2"> Version: 03272023<br> (C) Rodrigo A. Moreira 2023 </div>
-				<div class="w3-col l5">
-					Visualization of Topogical Simplicial Complexes Proteinss<br>
+				<div id="info" class="w3-col w3-quarter"> Version: 03272023<br> (C) Rodrigo A. Moreira 2023 <br>  </div>
+				<div class="w3-col w3-half">
+					Visualization of Topogical Simplicial Complexes from Proteins<br>
 					Basque Center for Applied Mathematics
 				</div>
-				<div class="w3-col l2"> </div>
+				<div class="w3-col w3-quarter"> <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>. </div>
 			</div>
 		</div>
 		<div class="w3-container">
@@ -69,12 +69,12 @@
 					Average Euler Characteristic: 
 				</div>
 				<div class="w3-col w3-leftbar w3-border-light-green" style="width:340px; height:120px">
-					Choose colors that represent an Euler curvature below and/or residues types<br>
+					Highlight a color representing an curvature value or a residue type: <br>
 					<div id="pickcolorbutton" class="w3-bar"> </div>
 				</div>
-				<div id="pickaabutton" class="w3-col w3-bar" style="width:500px; height:120px"></div>
-				<div id="inforesidue" class="w3-col l2 w3-leftbar w3-border-light-green" style="height:120px;"></div>
-				<div id="infomouse" class="w3-col l2 w3-leftbar w3-border-light-green"></div>
+				<div id="pickaabutton" class="w3-col w3-bar w3-leftbar w3-border-light-green" style="width:500px; height:120px"></div>
+				<div id="inforesidue" class="w3-col l2 w3-hide-medium w3-leftbar w3-border-light-green"></div> <!-- style="height:120px;" -->
+				<div id="infomouse"   class="w3-col l2 w3-hide-medium w3-leftbar w3-border-light-green"></div>
 				<!--div id="infotubeintersection" class="w3-col l2 w3-leftbar w3-border-light-green" style="margin:10px; padding: 10px; height:90px"></div-->
 				<div id="canvascontainer" class="w3-col l1">
 					<canvas id="maincanvas"></canvas>
@@ -84,16 +84,17 @@
 
 		<div class="w3-container w3-center w3-light-green">
 		<div class="w3-row">
-			<div class="w3-col l2">
-				<img src="../logo-bcam-color-transparent-450-300x150.png" class="w3-image w3-round" style="height: 80px">
+			<div  class="w3-col w3-quarter">
+				<img src="../img/mcen-logo.png" class="w3-image w3-round" style="height: 80px">
 			</div>
-			<div class="w3-col l5">
+			
+			<div class="w3-col w3-half">
 				Mathematical, Computational and Experimental Neuroscience (MCEN)<br>
 				Dr. Serafim Rodrigues<br>
 				Ikerbasque Research Professor
 			</div>
-			<div  class="w3-col l2">
-				<img src="../img/mcen-logo.png" class="w3-image w3-round" style="height: 80px">
+			<div class="w3-col w3-quarter">
+				<img src="../logo-bcam-color-transparent-450-300x150.png" class="w3-image w3-round" style="height: 80px">
 			</div>
 		</div>
 		</div>
