downloaded font awesome to use locally and update link between pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <link rel="stylesheet" href="custom.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-<script src="https://kit.fontawesome.com/c6514dbe78.js" crossorigin="anonymous"></script>
+<!--script src="https://kit.fontawesome.com/c6514dbe78.js" crossorigin="anonymous"></script-->
+<script src="fontawesome_c6514dbe78.js" crossorigin="anonymous"></script>
 <style>
 </style>
 </head>
@@ -107,6 +108,11 @@ In particular, the simple contact map analysis and hydrogen bonds network, commo
       <img src="img/curead-1.png" alt="curead-logo" class="w3-image w3-round" style="height: 150px"><br>
     <!--/li-->
   <!--/ul-->
+  <h4 class="w3-left">
+  <ul>
+  	<li> <a href="topologyviewer/index.html"> TopMolViewer : Visualization of mathematical properties we're computing directly projected on the coordinates of molecules. </a> </li>
+  </ul>
+  </h4>
   </div>
 </div>
 
