--- a/topologyviewer/index.html
+++ b/topologyviewer/index.html
@@ -7,6 +7,7 @@
 		<!--link type="text/css" rel="stylesheet" href="main.css"-->
 		<link type="text/css" rel="stylesheet" href="../w3.css">
 		<link type="text/css" rel="stylesheet" href="../custom.css">
+		<script src="../fontawesome_c6514dbe78.js" crossorigin="anonymous"></script>
 		<script type = "module">
 			import * as module from './main.js'
 			module.init();
@@ -51,7 +52,8 @@
 				<div id="info" class="w3-col w3-quarter"> Version: 03272023<br> (C) Rodrigo A. Moreira 2023 <br>  </div>
 				<div class="w3-col w3-half">
 					Visualization of Topogical Simplicial Complexes from Proteins<br>
-					Basque Center for Applied Mathematics
+					Basque Center for Applied Mathematics<br>
+					<a href="../index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back to main page</a>
 				</div>
 				<div class="w3-col w3-quarter"> <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>. </div>
 			</div>
@@ -85,16 +87,18 @@
 		<div class="w3-container w3-center w3-light-green">
 		<div class="w3-row">
 			<div  class="w3-col w3-quarter">
-				<img src="../img/mcen-logo.png" class="w3-image w3-round" style="height: 80px">
+				<a href="http://www.bcamath.org/en/research/lines/MCEN"> <img src="../img/mcen-logo.png" class="w3-image w3-round" style="height: 80px"> </a>
 			</div>
 			
 			<div class="w3-col w3-half">
+				<a href="http://www.bcamath.org/en/people/srodrigues">
 				Mathematical, Computational and Experimental Neuroscience (MCEN)<br>
 				Dr. Serafim Rodrigues<br>
 				Ikerbasque Research Professor
+				</a>
 			</div>
 			<div class="w3-col w3-quarter">
-				<img src="../logo-bcam-color-transparent-450-300x150.png" class="w3-image w3-round" style="height: 80px">
+				<a href="http://www.bcamath.org/" ><img src="../logo-bcam-color-transparent-450-300x150.png" class="w3-image w3-round" style="height: 80px"> </a>
 			</div>
 		</div>
 		</div>
