--- a/topologyviewer/index.html
+++ b/topologyviewer/index.html
@@ -44,12 +44,22 @@
 				--number-color: #07aacf;
 				--string-color: #8da300;
 			}
+			/* custom styling for all icons */
+			.fa,
+			.fa-solid,
+			.fa-brands, 
+			.fa-sharp-solid {
+				color: black;
+				background-color: #f6f6f6;
+				border-radius: 0.2em;
+				padding: 0.3em;
+			}
 		</style>
 	</head>
 	<body>
 		<div class="w3-container w3-center w3-light-green">
 			<div class="w3-row">
-				<div id="info" class="w3-col w3-quarter"> Version: 03272023<br> (C) Rodrigo A. Moreira 2023 <br>  </div>
+				<div id="info" class="w3-col w3-quarter"> Version: 03272023<br> <i class="fas fa-copyright" alt="(C)"></i> Rodrigo A. Moreira 2023 <br>  </div>
 				<div class="w3-col w3-half">
 					Visualization of Topogical Simplicial Complexes from Proteins<br>
 					Basque Center for Applied Mathematics<br>
