new small updates

--- a/topologyviewer/index.html
+++ b/topologyviewer/index.html
@@ -86,7 +86,7 @@
 				</div>
 				<div id="pickaabutton" class="w3-col w3-bar w3-leftbar w3-border-light-green" style="width:500px; height:120px"></div>
 				<div id="inforesidue" class="w3-col l2 w3-hide-medium w3-leftbar w3-border-light-green"></div> <!-- style="height:120px;" -->
-				<div id="infomouse"   class="w3-col l2 w3-hide-medium w3-leftbar w3-border-light-green"></div>
+				<div id="infomouse"   class="w3-col w3-half w3-hide-medium w3-leftbar w3-border-light-green"></div>
 				<!--div id="infotubeintersection" class="w3-col l2 w3-leftbar w3-border-light-green" style="margin:10px; padding: 10px; height:90px"></div-->
 				<div id="canvascontainer" class="w3-col l1">
 					<canvas id="maincanvas"></canvas>
