--- a/topologyviewer/index.html
+++ b/topologyviewer/index.html
@@ -95,7 +95,7 @@
 					Average Euler Characteristic: 
 				</div>
 				<div class="w3-col w3-leftbar w3-border-light-green" style="width:340px; height:120px">
-					Highlight a color representing an curvature value or a residue type: <br>
+					Highlight a color representing a curvature value or a residue type: <br>
 					<div id="pickcolorbutton" class="w3-bar"> </div>
 				</div>
 				<div id="pickaabutton" class="w3-col w3-bar w3-leftbar w3-border-light-green" style="width:500px; height:120px"></div>
